--- a/Tabloid/Views/Shared/_Layout.cshtml
+++ b/Tabloid/Views/Shared/_Layout.cshtml
@@ -1,14 +1,4 @@
-﻿@using Microsoft.AspNetCore.Hosting.Server
-@using Microsoft.AspNetCore.Hosting.Server.Features
-@model Main.Domains.MainModel
-
-@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@inject IServer Server;
-@{
-    var addressesFeature = Server.Features.Get<IServerAddressesFeature>();
-    var wssLink = addressesFeature.Addresses.FirstOrDefault() + "/hub";
-}
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8">
@@ -20,9 +10,6 @@
     <script src="~/lib/microsoft/signalr/dist/browser/signalr.js"></script>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="scripts/MainModel.js"></script>
-    <script>
-        var wsServerLink = "@wssLink";
-    </script>
     @Html.Partial("_ValidationScriptsPartial")
 </head>
 <body data-bs-theme="dark">
