--- a/Tabloid/Views/Views/Players.cshtml
+++ b/Tabloid/Views/Views/Players.cshtml
@@ -66,7 +66,7 @@
             <div class="p-0 d-flex flex-column col-2">
                 <div class="no-gutters row">
                     <div class="col">
-                        <button type="button" class="top-left btn btn-dark btn-block btn-sm" onclick="connection.invoke('SwapNames')">
+                        <button type="button" class="top-left btn btn-dark btn-block btn-sm" onclick="swapNames()">
                             <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="long-arrow-alt-left" class="svg-inline--fa fa-long-arrow-alt-left fa-w-14 " role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" style="margin-right: 0.5rem;">
                                 <path fill="currentColor" d="M134.059 296H436c6.627 0 12-5.373 12-12v-56c0-6.627-5.373-12-12-12H134.059v-46.059c0-21.382-25.851-32.09-40.971-16.971L7.029 239.029c-9.373 9.373-9.373 24.569 0 33.941l86.059 86.059c15.119 15.119 40.971 4.411 40.971-16.971V296z"></path>
                             </svg>
@@ -77,7 +77,7 @@
                         </button>
                     </div>
                     <div class="col">
-                        <button type="button" class="top-right btn btn-dark btn-block btn-sm" onclick="connection.invoke('SwapCountryes')">
+                        <button type="button" class="top-right btn btn-dark btn-block btn-sm" onclick="swapCountry()">
                             <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="long-arrow-alt-left" class="svg-inline--fa fa-long-arrow-alt-left fa-w-14 " role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" style="margin-right: 0.5rem;">
                                 <path fill="currentColor" d="M134.059 296H436c6.627 0 12-5.373 12-12v-56c0-6.627-5.373-12-12-12H134.059v-46.059c0-21.382-25.851-32.09-40.971-16.971L7.029 239.029c-9.373 9.373-9.373 24.569 0 33.941l86.059 86.059c15.119 15.119 40.971 4.411 40.971-16.971V296z"></path>
                             </svg>
@@ -90,7 +90,7 @@
                 </div>
                 <div class="no-gutters row">
                     <div class="col">
-                        <button type="button" class="bottom-left btn btn-dark btn-block btn-sm" onclick="connection.invoke('SwapPlayers')">
+                        <button type="button" class="bottom-left btn btn-dark btn-block btn-sm" onclick="swapPlayers()">
                             <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="long-arrow-alt-left" class="svg-inline--fa fa-long-arrow-alt-left fa-w-14 " role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" style="margin-right: 0.5rem;">
                                 <path fill="currentColor" d="M134.059 296H436c6.627 0 12-5.373 12-12v-56c0-6.627-5.373-12-12-12H134.059v-46.059c0-21.382-25.851-32.09-40.971-16.971L7.029 239.029c-9.373 9.373-9.373 24.569 0 33.941l86.059 86.059c15.119 15.119 40.971 4.411 40.971-16.971V296z"></path>
                             </svg>
@@ -101,7 +101,7 @@
                         </button>
                     </div>
                     <div class="col">
-                        <button type="button" class="bottom-right btn btn-dark btn-block btn-sm" onclick="connection.invoke('Reset')">
+                        <button type="button" class="bottom-right btn btn-dark btn-block btn-sm" onclick="reset()">
                             <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="undo" class="svg-inline--fa fa-undo fa-w-16 " role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" style="margin-right: 0.5rem;">
                                 <path fill="currentColor" d="M212.333 224.333H12c-6.627 0-12-5.373-12-12V12C0 5.373 5.373 0 12 0h48c6.627 0 12 5.373 12 12v78.112C117.773 39.279 184.26 7.47 258.175 8.007c136.906.994 246.448 111.623 246.157 248.532C504.041 393.258 393.12 504 256.333 504c-64.089 0-122.496-24.313-166.51-64.215-5.099-4.622-5.334-12.554-.467-17.42l33.967-33.967c4.474-4.474 11.662-4.717 16.401-.525C170.76 415.336 211.58 432 256.333 432c97.268 0 176-78.716 176-176 0-97.267-78.716-176-176-176-58.496 0-110.28 28.476-142.274 72.333h98.274c6.627 0 12 5.373 12 12v48c0 6.627-5.373 12-12 12z"></path>
                             </svg>
