--- a/Tabloid/Views/Views/Scoreboard.cshtml
+++ b/Tabloid/Views/Views/Scoreboard.cshtml
@@ -2,227 +2,8 @@
 @{
     Layout = "_Layout";
 }
-<style>
-    :root {
-        --banner-skew: 10px;
-    }
-
-    h2 {
-        margin-top: 10px;
-        font-size: 30px;
-        font-weight: normal;
-    }
-
-    h4 {
-        font-size: 18px;
-        font-weight: bold;
-    }
-
-    h5 {
-        font-size: 16px;
-        font-weight: normal;
-    }
-
-    h6 {
-        margin-top: auto;
-        font-size: 14px;
-        font-weight: normal;
-    }
-
-    span {
-        margin-top: 10px !important;
-    }
-
-    * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-    }
-
-    .hidden {
-        opacity: 0;
-    }
-
-    .playerName {
-        display: flex;
-    }
-
-    #right .playerName {
-        flex-direction: row-reverse;
-    }
-
-    .side {
-        margin: 0 5px;
-    }
-
-    body {
-        position: relative; /* Add this */
-        width: 100%;
-        height: 100%;
-        background: grey;
-        color: indigo;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: space-between;
-        font-family: Bahnschrift;
-        text-transform: uppercase;
-        white-space: nowrap;
-        filter: drop-shadow(0 0 5px rgba(0, 0, 0, 0.3));
-        background-image: url('background.png');
-        background-size: 100% auto;
-    }
-
-    .double-skew {
-        clip-path: polygon( 0 0, 100% 0, calc(100% - var(--banner-skew)) 100%, var(--banner-skew) 100% );
-    }
-
-    #topBar.double-skew {
-        clip-path: polygon( var(--banner-skew) 0%, calc(100% - var(--banner-skew)) 0%, 100% 100%, 0% 100% );
-    }
-
-    .left-skew, #left .score {
-        clip-path: polygon(0 0, calc(100% - var(--banner-skew)) 0, 100% 100%, var(--banner-skew) 100%);
-    }
-
-    .right-skew, #right .score {
-        clip-path: polygon(var(--banner-skew) 0, 100% 0, calc(100% - var(--banner-skew)) 100%, 0 100%);
-    }
-
-    #topGroup {
-        position: absolute;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        top: 50%; /* This should work now */
-        transform: translateY(145%); /* Add this to center vertically */
-    }
-
-    #banner {
-        width: 1200px;
-        height: 50px;
-        margin-top: 30px;
-        background: #ddd;
-        display: flex;
-        justify-content: center;
-    }
-
-        #banner > * {
-            background: white;
-            display: flex;
-            align-items: center;
-        }
-
-    #left, #right {
-        flex: 1;
-    }
-
-    .score {
-        width: 50px;
-        background: #333333;
-        color: white;
-        height: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-
-    #left .char-icons.left,
-    #right .char-icons.right {
-        margin-left: 0.5rem;
-        margin-right: 0.2rem;
-    }
-
-    #left .char-icons.right,
-    #right .char-icons.left {
-        margin-left: 0.2rem;
-        margin-right: 0.5rem;
-    }
-
-    #left .score {
-        margin-left: calc(var(--banner-skew) * -1);
-    }
-
-    #right .score {
-        margin-right: calc(var(--banner-skew) * -1);
-    }
-
-    .char-icons {
-        width: 38px;
-        height: auto;
-    }
-
-    .force {
-        margin: 0 0.5rem !important;
-    }
-
-    #metaTitle {
-        margin-bottom: 0;
-    }
-
-    #round {
-        margin-top: 0;
-    }
-
-    #left {
-        clip-path: polygon(-100% 0, calc(100% - var(--banner-skew)) 0, 100% 100%, -100% 100%);
-    }
-
-    #right {
-        clip-path: polygon(var(--banner-skew) 0, 200% 0, 200% 100%, 0 100%);
-        flex-direction: row-reverse;
-    }
-
-    #middle {
-        --shift: 3px;
-        margin: 0 calc(var(--banner-skew) * -1 + var(--shift));
-        width: 25%;
-        flex-direction: column;
-        justify-content: center;
-    }
-
-    #topBar, #subBar {
-        height: 17px;
-        width: 300px;
-        background: white;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        color: black;
-    }
-
-    #topBar {
-        margin-top: 7px;
-        position: absolute;
-        transition: 0.2s ease-in-out all;
-    }
-
-        #topBar.hidden {
-            transform: scaleX(0);
-        }
-
-    #subBar {
-        padding: 0 0.1rem;
-        margin-top: 5px;
-    }
-
-        #subBar > div {
-            flex: 1;
-            display: flex;
-            align-items: center;
-        }
-
-            #subBar > div.left {
-                justify-content: flex-end;
-            }
-
-        #subBar > img {
-            height: 90%;
-            margin: 0 0.5rem;
-        }
-
-</style>
-<div id="topGroup">
+<link rel="stylesheet" href="/styles/scoreboard.css" />
+<div class="scoreboard-bg">
 
     @* <div class="double-skew" id="topBar">
         <h6 data-sb="bracket-url" data-bind="metaUrl">TEST</h6>
@@ -234,9 +15,11 @@
             <div class="score">
                 <h2 data-side="left" data-sb="score" data-bind="gameInfoPlayer1Counter">0</h2>
             </div>
-            <h4 class="playerName">
-                <span data-side="left" data-sb="tag" data-bind="player1FullName">Player 1</span> <span class="side" data-side="left" data-sb="side"></span>
-            </h4>
+            <div class="score-bar">
+                <h4 class="playerName">
+                    <span data-side="left" data-sb="tag" data-bind="player1Name">Player 1</span> <span class="side" data-side="left" data-sb="side"></span>
+                </h4>
+            </div>
         </div>
 
         <div class="double-skew" id="middle">
@@ -245,18 +28,26 @@
         </div>
 
         <div id="right">
+            <div class="score-bar">
+                <h4 class="playerName">
+                    <span data-side="right" data-sb="tag" data-bind="player2Name">Player 2</span> <span class="side" data-side="right" data-sb="side"></span>
+                </h4>
+            </div>
             <div class="score">
                 <h2 data-side="right" data-sb="score" data-bind="gameInfoPlayer2Counter">0</h2>
             </div>
-            <h4 class="playerName">
-                <span data-side="right" data-sb="tag" data-bind="player2FullName">Player 2</span> <span class="side" data-side="right" data-sb="side"></span>
-            </h4>
         </div>
-
+    </div>
+    
+    <div id="downBar">
+        <div class="double-skew hidden" id="subBar1" style="opacity: 1;">
+            <h6 class="text-center justify-content-center" data-sb="team-left" data-bind="player1Tag"></h6>
+        </div>
+        <div class="double-skew hidden" id="subBar2" style="opacity: 1;">
+            <h6 class="text-center justify-content-center" data-sb="team-right" data-bind="player2Tag"></h6>
+        </div>
     </div>
 
-    <div class="double-skew hidden" id="subBar" style="opacity: 1;">
-        <h6 class="text-center justify-content-center" data-sb="commentator-right" data-bind="metaCommentators"></h6>
-    </div>
+
 
 </div>
