--- a/Tabloid/Views/Shared/_Layout.cshtml
+++ b/Tabloid/Views/Shared/_Layout.cshtml
@@ -1,4 +1,7 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNetCore.Hosting
+@using Microsoft.Extensions.Hosting
+
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8">
