--- a/Tabloid/Views/Views/Players.cshtml
+++ b/Tabloid/Views/Views/Players.cshtml
@@ -18,18 +18,7 @@
                             <input placeholder="Name" class="form-control" data-bind="gameInfoPlayer1Name">
                         </div>
                         <div class="d-flex align-items-center">
-                            <div class="input-group input-group-sm">
-                                <div class="input-group-prepend">
-                                    <span class="input-group-text">
-                                        <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="hand-pointer" class="svg-inline--fa fa-hand-pointer fa-w-14 fa-fw " role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
-                                            <path fill="currentColor" d="M448 240v96c0 3.084-.356 6.159-1.063 9.162l-32 136C410.686 499.23 394.562 512 376 512H168a40.004 40.004 0 0 1-32.35-16.473l-127.997-176c-12.993-17.866-9.043-42.883 8.822-55.876 17.867-12.994 42.884-9.043 55.877 8.823L104 315.992V40c0-22.091 17.908-40 40-40s40 17.909 40 40v200h8v-40c0-22.091 17.908-40 40-40s40 17.909 40 40v40h8v-24c0-22.091 17.908-40 40-40s40 17.909 40 40v24h8c0-22.091 17.908-40 40-40s40 17.909 40 40zm-256 80h-8v96h8v-96zm88 0h-8v96h8v-96zm88 0h-8v96h8v-96z"></path>
-                                        </svg>
-                                    </span>
-                                </div>
-                                <input class="form-control" data-bind="gameInfoPlayer1Country">
-                            </div>
-                            <div class="d-flex">
-                                <div style="width: 6px;"></div>
+                            <div class="d-flex w-100">
                                 <div role="group" class="btn-group" style="flex: 1 1 0%;">
                                     <button value="winners" name="side" type="button" class="btn btn-primary btn-sm" style="padding-top: 3px; padding-bottom: 3px; min-width: 30px;" onclick="addWinnerTagLeftSide('gameInfoPlayer1Name')">W</button>
                                     <button value="losers" name="side" type="button" class="btn btn-primary btn-sm" style="padding-top: 3px; padding-bottom: 3px; min-width: 30px;" onclick="addLooserTagLeftSide('gameInfoPlayer1Name')">L</button>
@@ -76,17 +65,6 @@
                             </svg>
                         </button>
                     </div>
-                    <div class="col">
-                        <button type="button" class="top-right btn btn-dark btn-block btn-sm" onclick="swapCountry()">
-                            <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="long-arrow-alt-left" class="svg-inline--fa fa-long-arrow-alt-left fa-w-14 " role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" style="margin-right: 0.5rem;">
-                                <path fill="currentColor" d="M134.059 296H436c6.627 0 12-5.373 12-12v-56c0-6.627-5.373-12-12-12H134.059v-46.059c0-21.382-25.851-32.09-40.971-16.971L7.029 239.029c-9.373 9.373-9.373 24.569 0 33.941l86.059 86.059c15.119 15.119 40.971 4.411 40.971-16.971V296z"></path>
-                            </svg>
-                            Country
-                            <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="long-arrow-alt-right" class="svg-inline--fa fa-long-arrow-alt-right fa-w-14 " role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" style="margin-left: 0.5rem;">
-                                <path fill="currentColor" d="M313.941 216H12c-6.627 0-12 5.373-12 12v56c0 6.627 5.373 12 12 12h301.941v46.059c0 21.382 25.851 32.09 40.971 16.971l86.059-86.059c9.373-9.373 9.373-24.569 0-33.941l-86.059-86.059c-15.119-15.119-40.971-4.411-40.971 16.971V216z"></path>
-                            </svg>
-                        </button>
-                    </div>
                 </div>
                 <div class="no-gutters row">
                     <div class="col">
@@ -127,19 +105,9 @@
                             <input placeholder="Name" class="form-control" value="Player 2" data-bind="gameInfoPlayer2Name">
                         </div>
                         <div class="d-flex align-items-center">
-                            <div class="input-group input-group-sm">
-                                <div class="input-group-prepend">
-                                    <span class="input-group-text">
-                                        <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="hand-pointer" class="svg-inline--fa fa-hand-pointer fa-w-14 fa-fw " role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
-                                            <path fill="currentColor" d="M448 240v96c0 3.084-.356 6.159-1.063 9.162l-32 136C410.686 499.23 394.562 512 376 512H168a40.004 40.004 0 0 1-32.35-16.473l-127.997-176c-12.993-17.866-9.043-42.883 8.822-55.876 17.867-12.994 42.884-9.043 55.877 8.823L104 315.992V40c0-22.091 17.908-40 40-40s40 17.909 40 40v200h8v-40c0-22.091 17.908-40 40-40s40 17.909 40 40v40h8v-24c0-22.091 17.908-40 40-40s40 17.909 40 40v24h8c0-22.091 17.908-40 40-40s40 17.909 40 40zm-256 80h-8v96h8v-96zm88 0h-8v96h8v-96zm88 0h-8v96h8v-96z"></path>
-                                        </svg>
-                                    </span>
-                                </div>
-                                <input class="form-control" data-bind="gameInfoPlayer2Country">
-                            </div>
-                            <div class="d-flex">
-                                <div style="width: 6px;"></div>
-                                <div role="group" class="btn-group" style="flex: 1 1 0%;"><button value="winners" name="side" type="button" class="btn btn-primary btn-sm" style="padding-top: 3px; padding-bottom: 3px; min-width: 30px;">W</button><button value="losers" name="side" type="button" class="btn btn-primary btn-sm" style="padding-top: 3px; padding-bottom: 3px; min-width: 30px;">L</button></div>
+                            <div class="d-flex w-100">
+                                <div role="group" class="btn-group" style="flex: 1 1 0%;"><button value="winners" name="side" type="button" class="btn btn-primary btn-sm" style="padding-top: 3px; padding-bottom: 3px; min-width: 30px;" onclick="addWinnerTagRightSide('gameInfoPlayer2Name')">W</button>
+                                    <button value="losers" name="side" type="button" class="btn btn-primary btn-sm" style="padding-top: 3px; padding-bottom: 3px; min-width: 30px;" onclick="addLooserTagRightSide('gameInfoPlayer2Name')">L</button></div>
                             </div>
                         </div>
                     </div>
