--- a/Tabloid/wwwroot/styles/scoreboard.scss
+++ b/Tabloid/wwwroot/styles/scoreboard.scss
@@ -66,7 +66,6 @@ body {
     text-transform: uppercase;
     white-space: nowrap;
     filter: drop-shadow(0 0 5px rgba(0, 0, 0, 0.3));
-    background-image: url('/background.png');
     background-size: 100% auto;
 }
 
@@ -241,4 +240,8 @@ body {
 h5 {
     margin-bottom: 0 !important;
     line-height: 0.9 !important;
+}
+
+h4 > span[data-side=left] {
+    transform: translateX(-50%);
 }
