--- a/scoreboard-app/src/scoreboard.scss
+++ b/scoreboard-app/src/scoreboard.scss
@@ -53,10 +53,9 @@ span {
 
 body {
   position: relative;
-  /* Add this */
   width: 100%;
   height: 100%;
-  background: grey;
+  background: transparent !important;
   color: indigo;
   display: flex;
   flex-direction: column;
@@ -70,21 +69,41 @@ body {
 }
 
 .double-skew {
-  clip-path: polygon(0 0, 100% 0, calc(100% - var(--banner-skew)) 100%, var(--banner-skew) 100%);
+  clip-path: polygon(
+    0 0,
+    100% 0,
+    calc(100% - var(--banner-skew)) 100%,
+    var(--banner-skew) 100%
+  );
 }
 
 #topBar.double-skew {
-  clip-path: polygon(var(--banner-skew) 0%, calc(100% - var(--banner-skew)) 0%, 100% 100%, 0% 100%);
+  clip-path: polygon(
+    var(--banner-skew) 0%,
+    calc(100% - var(--banner-skew)) 0%,
+    100% 100%,
+    0% 100%
+  );
 }
 
 .left-skew,
 #left .score {
-  clip-path: polygon(0 0, calc(100% - var(--banner-skew)) 0, 100% 100%, var(--banner-skew) 100%);
+  clip-path: polygon(
+    0 0,
+    calc(100% - var(--banner-skew)) 0,
+    100% 100%,
+    var(--banner-skew) 100%
+  );
 }
 
 .right-skew,
 #right .score {
-  clip-path: polygon(var(--banner-skew) 0, 100% 0, calc(100% - var(--banner-skew)) 100%, 0 100%);
+  clip-path: polygon(
+    var(--banner-skew) 0,
+    100% 0,
+    calc(100% - var(--banner-skew)) 100%,
+    0 100%
+  );
 }
 
 #topGroup {
@@ -165,7 +184,12 @@ body {
 }
 
 #left {
-  clip-path: polygon(-100% 0, calc(100% - var(--banner-skew)) 0, 100% 100%, -100% 100%);
+  clip-path: polygon(
+    -100% 0,
+    calc(100% - var(--banner-skew)) 0,
+    100% 100%,
+    -100% 100%
+  );
 }
 
 #right {
@@ -182,7 +206,8 @@ body {
 }
 
 #topBar,
-#subBar1, #subBar2 {
+#subBar1,
+#subBar2 {
   height: 17px;
   width: 300px;
   background: white;
@@ -198,50 +223,7 @@ body {
   transition: 0.2s ease-in-out all;
 }
 
-#topBar.hidden {
-  transform: scaleX(0);
-}
-
 #downBar {
   display: flex;
-  flex-direction: row;
-  width: 100%;
-}
-
-#subBar1 {
-  padding: 0 0.1rem;
-  margin-top: 5px;
-  margin-left: 3vw;
-  margin-right: auto;
-}
-
-#subBar2 {
-  padding: 0 0.1rem;
-  margin-top: 5px;
-  margin-left: auto;
-  margin-right: 3vw;
-}
-
-#subBar > div {
-  flex: 1;
-  display: flex;
-  align-items: center;
-}
-
-#subBar > div.left {
-  justify-content: flex-end;
-}
-
-#subBar > img {
-  height: 90%;
-  margin: 0 0.5rem;
-}
-
-h5 {
-  margin-bottom: 0 !important;
-  line-height: 0.9 !important;
-}
-
-h4 > span[data-side=left] {
-  transform: translateX(-50%);
+  justify-content: space-between;
 }
