--- a/scoreboard-app/src/global.scss
+++ b/scoreboard-app/src/global.scss
@@ -10,6 +10,18 @@ html {
   box-sizing: border-box;
 }
 
+// Режим показа границ контейнеров скорборда (включается классом на body)
+body.scoreboard-show-borders {
+
+  .centerDiv,
+  .leftDiv,
+  .rightDiv,
+  .fightModeDiv {
+    outline: 2px dashed #dc3545;
+    outline-offset: -2px;
+    background-color: rgba(220, 53, 69, 0.05);
+  }
+}
 .hidden {
   opacity: 0;
 }
