--- a/scoreboard-app/src/components/AdminPanel/Cards/VisibilityCard.module.scss
+++ b/scoreboard-app/src/components/AdminPanel/Cards/VisibilityCard.module.scss
@@ -12,7 +12,7 @@
 .cardBody {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-around;
   height: 100%;
 }
 
