--- a/scoreboard-app/src/components/AdminPanel/Cards/PlayerCard.module.scss
+++ b/scoreboard-app/src/components/AdminPanel/Cards/PlayerCard.module.scss
@@ -130,7 +130,7 @@
 .scoreSection {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   margin-bottom: 1rem;
   gap: 0.5rem;
 }
