--- a/scoreboard-app/src/components/AdminPanel/Cards/PlayerCard.module.scss
+++ b/scoreboard-app/src/components/AdminPanel/Cards/PlayerCard.module.scss
@@ -78,11 +78,12 @@
   background-color: #212529;
   border: 1px solid #0d6efd;
   border-radius: 1rem;
-  margin-top: 0.25rem;
+  margin-bottom: 0.25rem;
   max-height: 200px;
   overflow-y: auto;
-  z-index: 1000;
-  top: 100%;
+  z-index: 9999;
+  bottom: 100%;
+  top: auto;
 }
 
 .presetItem {
