feat: Добавить поддержку метки времени загрузки изображений и видео в компонентах и сервисах

--- a/scoreboard-app/src/components/AdminPanel/Cards/ColorPresetCard.module.scss
+++ b/scoreboard-app/src/components/AdminPanel/Cards/ColorPresetCard.module.scss
@@ -32,6 +32,7 @@
   color: white;
   font-weight: bold;
   margin-bottom: 0.75rem;
+  text-align: center;
 }
 
 .presetsContainer {
@@ -53,6 +54,7 @@
     color: white;
     font-weight: bold;
     margin-bottom: 0.75rem;
+    text-align: center;
   }
 }
 
