feat: Реализовать управление фоновыми изображениями с использованием базы данных и кэша

--- a/scoreboard-app/src/components/AdminPanel/Cards/MetaPanel.module.scss
+++ b/scoreboard-app/src/components/AdminPanel/Cards/MetaPanel.module.scss
@@ -43,6 +43,9 @@
   color: white;
   font-weight: bold;
   font-size: 12px;
+  text-align: center;
+  width: 100%;
+  display: block;
 }
 
 .textInput {
